# fluxbeam-crate

./: LICENSE.txt
programs/fluxbeam-crate/: Cargo.toml
programs/fluxbeam-crate/src/: add_liquidity.rs  add_liquidity_single.rs  create_pool.rs  interfaces.rs  lib.rs  mod.rs  remove_liquidity.rs  remove_liquidity_single.rs  swap.rs
tests/: fluxbeam-crate.ts
