[package]
name = "fluxbeam-crate"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
license = "MIT"
repository = "https://github.com/alphabatem/fluxbeam-crate"

[lib]
crate-type = ["cdylib", "lib"]
name = "fluxbeam_crate"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.28.0", features = ["metadata"] }
solana-program = "=1.16.20"
winnow="=0.4.1"
ahash = "=0.8.6"